adding purchase page

--- a/src/purchase.html
+++ b/src/purchase.html
@@ -19,7 +19,7 @@
       <button class="navbar-toggler navbar-toggler-right hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <span class="navbar-brand">Yet Another Dashboard</span>
+      <span class="navbar-brand">Purchase ME</span>
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -66,14 +66,14 @@
                 <tbody>
                   <tr>
                     <td>0</td>
-                    <td>Jet</td>
-                    <td>75 eth</td>
+                    <td>Computer</td>
+                    <td>1 eth</td>
                     <td id="affiliateLink-0"></td>
                   </tr>
                   <tr>
                     <td>1</td>
-                    <td>Car</td>
-                    <td>50 eth</td>
+                    <td>Computer</td>
+                    <td>1 eth</td>
                     <td id="affiliateLink-1"></td>
                   </tr>
                 </tbody>
@@ -94,6 +94,6 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="ie10-viewport-bug-workaround.js"></script>
     <script src="web3.min.js"></script>
-    <script src="index.js"></script>
+    <script src="purchase.js"></script>
   </body>
 </html>
