--- a/src/purchase.html
+++ b/src/purchase.html
@@ -16,70 +16,45 @@
   <body>
     <!--Top Navigation Bar-->
     <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-      <button class="navbar-toggler navbar-toggler-right hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <span class="navbar-brand">Purchase ME</span>
-
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <p class="nav-link">Seller Address: <span id="seller-address"></span></p>
-          </li>
-          <li class="nav-item">
-            <p class="nav-link">Seller Balance: <span id="seller-balance"></span></p>
-          </li>
-        </ul> 
-      </div>
     </nav>
 
     <!--Sidebar Navigation-->
     <div class="container-fluid">
       <div class="row">
         <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
-          <ul class="nav nav-pills flex-column" id="sideAffiliateList">
-            <li class="nav-item">
-              <span class="nav-link active">I am Affliate:</span>
-            </li>
-          </ul>
         </nav>
 
         <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
-          <div id="ondashboard">
-            <h1> Hi Everyone</h1>
-          </div>
-
-          <div id="onaffiliate">
-            <h1>Product Page for: <span id="affiliateAddy"></span></h1>
-
-            <h2>Products</h2>
+            <h2>BUY IT!!!</h2>
             <div class="table-responsive">
-              <table class="table table-striped">
-                <thead>
-                  <tr>
-                    <th>#id</th>
-                    <th>Description</th>
-                    <th>Price</th>
-                    <th>Your Link!</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>0</td>
-                    <td>Computer</td>
-                    <td>1 eth</td>
-                    <td id="affiliateLink-0"></td>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>Computer</td>
-                    <td>1 eth</td>
-                    <td id="affiliateLink-1"></td>
-                  </tr>
-                </tbody>
-              </table>
+
+              <form class="form-horizontal">
+                <div class="form-group">
+                  <label class="control-label col-sm-2" for="vendor">Vendor Addy:</label>
+                  <div class="col-sm-10">
+                    <input type="vendor" class="form-control" id="vendor" disabled>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="control-label col-sm-2" for="affiliate">Affiliate Addy:</label>
+                  <div class="col-sm-10">
+                    <input type="affiliate" class="form-control" id="pwd" disabled>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="control-label col-sm-2" for="pwd">Buyer Addy:</label>
+                  <div class="col-sm-10">
+                    <input type="buyer" class="form-control" >
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="col-sm-offset-2 col-sm-10">
+                    <button class="btn btn-default">Submit</button>
+                  </div>
+                </div>
+              </form>               
+
             </div>
-          </div>
         </main>
       </div>
     </div>
@@ -94,6 +69,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="ie10-viewport-bug-workaround.js"></script>
     <script src="web3.min.js"></script>
+    <script src="uri.min.js"></script>
     <script src="purchase.js"></script>
   </body>
 </html>
