--- a/src/purchase.html
+++ b/src/purchase.html
@@ -25,31 +25,33 @@
         </nav>
 
         <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
-            <h2>BUY IT!!!</h2>
+            <h2>Buy it for just: <span id="item-balance"></span> Ether!</h2>
             <div class="table-responsive">
 
               <form class="form-horizontal">
+                <input type="hidden" name="balance">
+
                 <div class="form-group">
                   <label class="control-label col-sm-2" for="vendor">Vendor Addy:</label>
                   <div class="col-sm-10">
-                    <input type="vendor" class="form-control" id="vendor" disabled>
+                    <input type="text" name="vendor" class="form-control" id="vendor" disabled>
                   </div>
                 </div>
                 <div class="form-group">
                   <label class="control-label col-sm-2" for="affiliate">Affiliate Addy:</label>
                   <div class="col-sm-10">
-                    <input type="affiliate" class="form-control" id="pwd" disabled>
+                    <input type="text" name="affiliate" class="form-control" id="affiliate" disabled>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="control-label col-sm-2" for="pwd">Buyer Addy:</label>
+                  <label class="control-label col-sm-2" for="buyer">Buyer Addy:</label>
                   <div class="col-sm-10">
-                    <input type="buyer" class="form-control" >
+                    <input type="text" class="form-control" name="buyer">
                   </div>
                 </div>
                 <div class="form-group">
                   <div class="col-sm-offset-2 col-sm-10">
-                    <button class="btn btn-default">Submit</button>
+                    <button class="btn btn-default" onclick="App.submitContract()">Submit</button>
                   </div>
                 </div>
               </form>               
