--- a/src/purchase.html
+++ b/src/purchase.html
@@ -56,6 +56,8 @@
                 </div>
               </form>               
 
+              <ul id="buyer-addresses"></ul>
+
             </div>
         </main>
       </div>
