--- a/src/purchase.html
+++ b/src/purchase.html
@@ -51,16 +51,13 @@
                 </div>
                 <div class="form-group">
                   <div class="col-sm-offset-2 col-sm-10">
-                    <button class="btn btn-default" onclick="App.submitContract()">Submit</button>
+                    <button type="button" class="btn btn-default" onclick="App.submitContract()">Submit</button>
                   </div>
                 </div>
               </form>               
 
-<<<<<<< HEAD
-=======
               <ul id="buyer-addresses"></ul>
 
->>>>>>> c42676910b6ca805e816e0d8548d226d059c4159
             </div>
         </main>
       </div>
