--- a/src/Car2.html
+++ b/src/Car2.html
@@ -5,14 +5,14 @@
         <link type="text/css" rel="stylesheet" href="car2.css"/>
     </head>
     <body>
-        <div id="Header">
-            <h1> BUY THIS FANCY CAR!</h1>
-            <img src""/>
-        </div>
-        <br>
-        <div id="navbar">
+        <span id="header">
+            <!--<h1> BUY THIS FANCY CAR!</h1>-->
+            <img id="logo" src="./ethedlogo.png"/>
+        </span>
+       
+        <span id="navbar">
             <h2>2014 McLaren P1</h2>
-        </div>
+        </span>
         <br>
         <div id="image">
             <img id="carImg" src='https://cdn.jamesedition.com/media/W1siZiIsImRhdGEvaW1hZ2VzLzMwMTc0ODY0X3NvdXJjZS5qcGciXSxbInAiLCJ0aHVtYiIsIjIwMDB4Il0sWyJwIiwiZW5jb2RlIiwianBnIiwiLXN0cmlwIC1xdWFsaXR5IDgwIC1pbnRlcmxhY2UgUGxhbmUiXV0/mclaren-p1.jpg?sha=47e669c07e1f1811'/> <!-- a pretty picture -->
