--- a/src/planes.html
+++ b/src/planes.html
@@ -24,17 +24,20 @@
 	  <div class="pricetop"><p>75 Ethereum</p></div>
 	</center></div>
 <div class="prodimage">
-	<center>
 	  <img src="https://cdn.jamesedition.com/media/W1siZiIsImRhdGEvaW1hZ2VzLzI3ODg5MjAyX3NvdXJjZS5qcGciXSxbInAiLCJ0aHVtYiIsIjEwNDB4NjIwIyJdLFsicCIsImVuY29kZSIsImpwZyIsIi1zdHJpcCAtcXVhbGl0eSA4MCAtaW50ZXJsYWNlIFBsYW5lIl1d/lear-60-sn-206-for-sale-or-trade.jpg?sha=bd577896ad6aa286"/>
-	</center>
+	  
 </div>
 
+
+
 <div class="productdesc">
-	<h2>Listed Price</h2>	  
+	<h2>Listed Price</h2>
+<div class="pricing">		  
   <div class="ethcurreny"><a href="http://10.30.99.22:8545/src/purchase.html?vendor=0x1df12028716abd63823218f32fc57c0b100987ef&balance=75&affiliate=0xabd5aabaccf6c9cb83b0bdc24a7b77f70747de42"><img src="ethcurrency.png" width="64" height="64"/></a></div>
   <div class="price">
     <p><a href="http://10.30.99.22:80/src/purchase.html?vendor=0x1df12028716abd63823218f32fc57c0b100987ef&balance=75&affiliate=0xabd5aabaccf6c9cb83b0bdc24a7b77f70747de42">75 ETH</a></p>
   </div>
+ </div>
   
 <div class="details">
 <h2>Details</h2>
